# scouterHUD

./: .gitignore  CONTRIBUTING.md  README.md  demo.sh
docs/: STATUS.md  TECH_DESIGN.md  adr-001-camera-optional.md  adr-002-app-primary-input.md  adr-003-gauntlet-optional.md  app-tech-doc.md  bridge-implementation.md  bridge-tech-doc.md  camera-tech-doc.md  community-guide.md  ecosystem-overview.md  gauntlet-tech-doc.md  pi-setup-guide.md  scouter-amazon-links(1).md  scouter-amazon-shopping-list.md  scouterapp-ui-spec.md  scouterbridge-demo-v1(1).md  security-model.md  why-scouterhud.md  why-this-stack.md
emulator/: config.yaml  emulator.py  generate_all_qrs.py  pyproject.toml
emulator/devices/: __init__.py  base.py  home_thermostat.py  industrial_machine.py  medical_monitor.py  server_infra.py  vehicle_obd2.py
emulator/generators/: realistic_data.py
software/: pyproject.toml  run_hud.py
software/scouterhud/: main.py
software/scouterhud/auth/: auth_manager.py  pin_entry.py
software/scouterhud/camera/: backend.py  backend_desktop.py  qr_decoder.py
software/scouterhud/display/: backend.py  backend_desktop.py  backend_preview.py  backend_spi.py  renderer.py  widgets.py
software/scouterhud/input/: backend.py  events.py  gauntlet_input.py  input_manager.py  keyboard_input.py  phone_input.py
software/scouterhud/qrlink/: connection.py  protocol.py
software/scouterhud/qrlink/transports/: mqtt.py
software/tests/: test_auth.py  test_connection.py  test_gauntlet.py  test_input.py  test_phone_input.py  test_protocol.py  test_renderer.py  test_spi_backend.py
(+47 files in other folders)
