[project]
name = "scouterhud"
version = "0.1.0"
description = "ScouterHUD — Open Source AI-Powered Monocular HUD"
requires-python = ">=3.10"
dependencies = [
    "paho-mqtt>=2.0",
    "pyyaml>=6.0",
    "Pillow>=10.0",
    "pyzbar>=0.1.9",
    "pygame>=2.5",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
pi = [
    "st7789>=0.0.4",
    "RPi.GPIO>=0.7",
    "spidev>=3.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
